--- a/src/customComponents/res/sidebar.qss
+++ b/src/customComponents/res/sidebar.qss
@@ -8,7 +8,7 @@ QListWidget::item {
     padding-left: 10px;
     border: 1px 0px 1px 0px;
     border-radius: 10px;
-    margin: 2px 2px 0px 0px;
+    margin: 10px 0px 0px 4px;
     outline-style: none;
     height: 60px;
     width: auto;
@@ -24,16 +24,17 @@ QListWidget::item:hover
 QListWidget::item:selected
 {
     border:0px none;
-    background:rgb(223, 223, 223);
+    background:rgb(255, 255, 255);
     color:rgb(22, 22, 22);
 }
 
 
 MSidebar {
-    background-color: #ffffff;
+    background-color: #E4E4E4;
     border: 1px #d2d2d2 solid;
     border-left: 0px;
+    border-radius: 0px;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    padding: 0px;
+    margin: 10px 0px;
 }
